--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl https://www.ic.gov.sa/Umbraco/Surface/Map/getMaps?category=1991,1994,1995,1996,1997 | jq . > invest.json
+        curl http://api.worldbank.org/v2/country/all/indicator/SP.POP.TOTL?format=json | jq . > indicators.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
