--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -4,7 +4,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron:  '6,26,46 * * * *'
+    - cron:  '0 0 1 * *'
 
 jobs:
   scheduled:
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl http://api.worldbank.org/v2/country/all/indicator/SP.POP.TOTL?format=json | jq . > indicators.json
+        curl http://api.worldbank.org/v2/country/sa/indicator/NY.GDP.MKTP.CD?format=json | jq . > indicators.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
